# pystream-pipeline

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  DEVELOPMENT.md  LICENSE.md  README.md  REPORT.md  demo.ipynb  demo_pipeline.py  pyproject.toml
.github/workflows/: pr-profiling.yml  tests.yml  unit-tests.yml
docs/: requirements.txt
docs/source/: advanced.rst  api.rst  conf.py  index.rst  usage.rst
pystream/: __init__.py
pystream/data/: pipeline_data.py  profiler_data.py  stage_data.py
pystream/functional/: __init__.py  functions.py
pystream/general/: errors.py
pystream/pipeline/: __init__.py  automation.py  parallel_pipeline.py  pipeline.py  pipeline_base.py  profiler.py  serial_pipeline.py
pystream/pipeline/parallel_thread_pipeline/: pipeline.py
pystream/pipeline/serial_pipeline/: pipeline.py
pystream/pipeline/utils/: automation.py  general.py  profiler.py
pystream/stage/: container.py  final_stage.py  profiler.py  stage.py
pystream/utils/: errors.py  general.py  logger.py  profiler.py
scripts/performance_test/: wait_test.py
tests/: conftest.py  test_pystream.py
tests/functional/: test_functions.py
tests/pipeline/: test_automation.py  test_mixed_pipeline.py  test_parallel_pipeline.py  test_pipeline.py  test_serial_pipeline.py
tests/pipeline/parallel_thread_pipeline/: test_parallel_thread_pipeline.py
tests/pipeline/serial_pipeline/: test_serial_pipeline.py
tests/pipeline/utils/: test_profiler.py
tests/stage/: test_container.py  test_final_stage.py
tests/utils/: test_general.py  test_profiler.py
